--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="icon" href="assets/img/logo.png">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="logo.png">
         <title>LikeGo - играть онлайн</title>
     </head>
     <body>
@@ -19,7 +19,7 @@
                 <div class="nav__content bd-grid">
                     <a href="" class="nav__perfil">
                         <div class="nav__img">
-                            <img src="assets/img/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
                         
                         <div>
@@ -205,6 +205,6 @@ LikeGo - 2022
 </div>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
